--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -42,6 +42,13 @@
 		-webkit-text-size-adjust: none;
 	}
 
+	.merci {
+		
+		font-size: 25px;
+		margin-left: 470px;
+		position: absolute;
+	}
+
 /* Box Model */
 
 	*, *:before, *:after {
